playlist: bad icon for http/https streams
"type_file.png" is used instead of "type_net.png" for http/https streams (ok for other network protocols: rtp, rtsp, mms).
Issue introduced in VLC 3.0 (see screenshot below).
"type_file.png" is used instead of "type_net.png" for http/https streams (ok for other network protocols: rtp, rtsp, mms).
Issue introduced in VLC 3.0 (see screenshot below).
Probably introduced by commit input: add b_net variable in item
assigned to @chouquette
= 00094c7d66 = |
qt: playlist: Display the stream icon when appropriate |
---|
added Status::fixed label
changed milestone to %3.0 FF
closed
VideoLAN code repository instance