qt: playlist: Display the stream icon when appropriate

Fix #18534